trail background image
test

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
     <body>
         <div>
-           <p>
-            Hello.
-           </p>
+          <img class="bg" src="h05.jpg">
         </div>
     </body>
 </html>
