--- a/index.html
+++ b/index.html
@@ -1,14 +1,108 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Citizen</title>
+	<title>Citizen Editions</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
     <body>
         <div>
-          <img class="bg" src="h05.jpg">
+          <p>Thanks for visiting Citizen Editions. As of Spring 2023, we ceased all photobook distribution services. Photobooks continue to be made and sold by fine publishers and bookstores around the world. While our distribution efforts have stopped, we encourage you to continue to support those who make and sell unique books.</p>
+            <p>Publishers We Worked With:</p>
+            <ul>
+    <li><a href="https://galerie5b.net/" target="_blank">5b (Germany)</a></li>
+    <li><a href="https://ahornbooks.com" target="_blank">Ahorn Books (Germany)</a></li>
+    <li><a href="https://antiherobooks.com" target="_blank">Antihero (United States)</a></li>
+    <li><a href="https://areabooks.org" target="_blank">Area Books (United Kingdom)</a></li>
+    <li><a href="https://artpapereditions.org" target="_blank">Art Paper Editions (Belgium)</a></li>
+    <li><a href="http://bronze-age.co/" target="_blank">Bronze Age (United Kingdom)</a></li>
+    <li><a href="https://www.chosecommune.com" target="_blank">Chose Commune (France)</a></li>
+    <li><a href="https://diskobay.org" target="_blank">Disko Bay (Denmark)</a></li>
+    <li><a href="https://www.drittelbooks.de" target="_blank">Drittel Books (Germany)</a></li>
+    <li><a href="https://herepress.org" target="_blank">Here Press (United Kingdom)</a></li>
+    <li><a href="https://www.imagtextithaca.com" target="_blank">Image Text Ithaca (United States)</a></li>
+    <li><a href="https://www.kgprojects.org" target="_blank">KG Projects (United States)</a></li>
+    <li><a href="https://kultbooks.com" target="_blank">Kult Books (Sweden)</a></li>
+    <li><a href="https://libraryman.se" target="_blank">Libraryman (Sweden)</a></li>
+    <li><a href="https://lodretvandret.com" target="_blank">Lodret Vandret (Denmark)</a></li>
+    <li><a href="https://loosejoints.pub" target="_blank">Loose Joints (France & United Kingdom)</a></li>
+    <li><a href="https://magichourpress.org" target="_blank">Magic Hour Press (United States)</a></li>
+    <li><a href="https://matteeditions.com" target="_blank">Matte Editions (United States)</a></li>
+    <li><a href="https://palmstudios.co.uk" target="_blank">Palm* Studios (United Kingdom)</a></li>
+    <li><a href="https://saintlucybooks.com" target="_blank">Saint Lucy Books (United States)</a></li>
+    <li><a href="https://skinnerboox.com" target="_blank">Skinnerboox (Italy)</a></li>
+    <li><a href="https://tisbooks.pub" target="_blank">TIS Books (United States)</a></li>
+</ul>
+
+            <p>Shops We Sold To:</p>
+<ul>
+    <li><a href="https://acleanlitspace.com" target="_blank">A Clean Lit Space (Brooklyn, NY)</a></li>
+    <li><a href="https://actualsource.org" target="_blank">Actual Source (Provo, UT)</a></li>
+    <li><a href="https://agonybooks.club/" target="_blank">Agony Books (Richmond, VA)</a></li>
+    <li><a href="https://shoppe.amberinteriordesign.com" target="_blank">Amber Interiors (CA)</a></li>
+    <li><a href="https://www.anaakcollection.com" target="_blank">Anaak</a></li>
+    <li><a href="https://shop-anaise.com" target="_blank">Anaïse (San Jose, CA)</a></li>
+    <li><a href="https://www.arcanabooks.com" target="_blank">Arcana (Los Angeles, CA)</a></li>
+    <li><a href="https://www.artcatalogues.com" target="_blank">Art Catalogues (Los Angeles, CA)</a></li>
+    <li><a href="https://www.bkst.co/" target="_blank">B_KS@ (Detroit, MI)</a></li>
+    <li><a href="https://baltimorephotospace.com" target="_blank">Baltimore Photo Space (Baltimore, MD)</a></li>
+    <li><a href="https://www.book-shop.com" target="_blank">Book/Shop (Oakland, CA)</a></li>
+    <li><a href="https://www.cca.qc.ca" target="_blank">Canadian Center for Architecture (Montreal, QC)</a></li>
+    <li><a href="https://www.cavgallery.com/" target="_blank">CAV Gallery (Las Cruces, NM)</a></li>
+    <li><a href="https://charcoalbookclub.com" target="_blank">Charcoal Book Club</a></li>
+    <li>Club Night Club</li>
+    <li><a href="https://theconcernnewsstand.com" target="_blank">The Concern Newsstand (Chapel Hill, NC)</a></li>
+    <li><a href="https://dashwoodbooks.com" target="_blank">Dashwood Books (New York, NY)</a></li>
+    <li><a href="https://foleygallery.com" target="_blank">Foley Gallery (New York, NY)</a></li>
+    <li><a href="https://glassbookshop.com" target="_blank">Glass Bookshop (Edmonton, AB)</a></li>
+    <li><a href="https://www.grahamfoundation.org" target="_blank">Graham Foundation (Chicago, IL)</a></li>
+    <li><a href="https://thegreenray.world" target="_blank">The Green Ray (Nashville, TN)</a></li>
+    <li><a href="https://melaniemcwhorter.com/grenadebooks" target="_blank">Grenade in a Jar</a></li>
+    <li><a href="https://headhi.net" target="_blank">Head Hi (Brooklyn, NY)</a></li>
+    <li><a href="https://www.hennesseyingalls.com" target="_blank">Hennessey + Ingalls (Los Angeles, CA)</a></li>
+    <li><a href="https://www.hesperios.com" target="_blank">Hesperios (New York, NY)</a></li>
+    <li><a href="https://hudsonwilder.com" target="_blank">Hudson Wilder (Brooklyn, NY)</a></li>
+    <li><a href="https://www.icp.org" target="_blank">International Center of Photography (New York, NY)</a></li>
+    <li><a href="https://www.irisgallery.com" target="_blank">Iris (South Orange, NJ)</a></li>
+    <li>Jerry Benson Books (Santa Rosa, CA)</li>
+    <li><a href="https://karmakarma.org" target="_blank">Karma Books (New York, NY)</a></li>
+    <li><a href="https://langbooks.com" target="_blank">LANG Books (San Diego, CA)</a></li>
+    <li><a href="https://maimounstore.com" target="_blank">Maimoun</a></li>
+    <li><a href="https://maisonplage.com" target="_blank">Maison Plage (Los Angeles, CA)</a></li>
+    <li><a href="https://mastbooks.com" target="_blank">MAST (New York, NY)</a></li>
+    <li><a href="https://www.mcnallyjackson.com" target="_blank">McNally Jackson (New York + Brooklyn, NY)</a></li>
+    <li><a href="https://meridianbooks.org" target="_blank">Meridian (Hudson, NY)</a></li>
+    <li><a href="https://store.moma.org" target="_blank">MoMA (New York, NY)</a></li>
+    <li><a href="https://shopneighbour.com" target="_blank">Neighbour (Vancouver, BC)</a></li>
+    <li><a href="https://www.noguchi.org" target="_blank">The Noguchi Museum (Queens, NY)</a></li>
+    <li><a href="https://www.photoeye.com" target="_blank">Photo-eye (Santa Fe, NM)</a></li>
+    <li><a href="https://phtsdr.com/" target="_blank">picturehouse + thesmalldarkroom (New York, NY)</a></li>
+    <li><a href="https://playground.store" target="_blank">Playground Annex (Brooklyn, NY)</a></li>
+    <li><a href="https://thepolygon.ca/bookstore" target="_blank">The Polygon Bookstore (Vancouver, BC)</a></li>
+    <li><a href="https://printedmatter.org" target="_blank">Printed Matter (New York, NY)</a></li>
+    <li><a href="https://regular.mx/" target="_blank">Regular Coffee and Books (Nuevo Leon, MX)</a></li>
+    <li><a href="https://www.shoprooneys.ca/" target="_blank">Rooney's (Hamilton, ON)</a></li>
+    <li><a href="https://www.roughtrade.com/us/nyc" target="_blank">Rough Trade NYC (Brooklyn, NY)</a></li>
+    <li><a href="https://rrunberg.com/" target="_blank">R. Runberg Curiosities (Charlotte, NC)</a></li>
+    <li><a href="https://www.sscornershop.com" target="_blank">S & S Corner Shop (Springs, NY)</a></li>
+    <li><a href="https://www.skylightbooks.com" target="_blank">Skylight Books (Los Angeles, CA)</a></li>
+    <li><a href="https://socogallery.com" target="_blank">SOCO Gallery (Charlotte, NC)</a></li>
+    <li><a href="https://spacescorners.com" target="_blank">Spaces Corners (Pittsburgh, PA)</a></li>
+    <li><a href="https://www.spoonbillbooks.com" target="_blank">Spoonbill Books (Brooklyn, NY)</a></li>
+    <li><a href="https://bulgergallery.com" target="_blank">Stephen Bulger Gallery (Toronto, ON)</a></li>
+    <li><a href="https://www.strandbooks.com" target="_blank">Strand (New York, NY)</a></li>
+    <li>Studio Xol (Altadena, CA)</li>
+    <li><a href="https://www.thesedaysla.com" target="_blank">These Days (Los Angeles, CA)</a></li>
+    <li><a href="https://threelives.com" target="_blank">Three Lives & Company (New York, NY)</a></li>
+    <li><a href="https://typebooks.ca" target="_blank">Type Books (Toronto, ON)</a></li>
+    <li><a href="https://www.uniquephoto.com" target="_blank">Unique Photo (Philadelphia, PA)</a></li>
+    <li><a href="https://www.villageworks.com" target="_blank">Village Works (New York, NY)</a></li>
+    <li><a href="https://wonderfair.com" target="_blank">Wonder Fair (Lawrence, KS)</a></li>
+</ul>
+            <p>If you have questions, please reach out to David Lurvey at <a href="mailto:david@citizeneditions.com">david @ citizeneditions.com.</a></p>
+            <p>Owned and operated by Citizen Editions LLC.</p>
+
         </div>
     </body>
 </html>
