--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
     <body>
         <div>
+        
           <p>Thanks for visiting Citizen Editions. As of Spring 2023, we ceased all photobook distribution services. Photobooks continue to be made and sold by fine publishers and bookstores around the world. While our distribution efforts have stopped, we encourage you to continue to support those who make and sell unique books.</p>
+            <br>
+             <p>Citizen Editions continues to exist as a photography services company with a wide range of capabilites. For more information, <a href="mailto:david@citizeneditions.com">please reach out to us.</a></p>
+            <br>
             <p>Publishers We Worked With:</p>
             <ul>
     <li><a href="https://galerie5b.net/" target="_blank">5b (Germany)</a></li>
