--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+    
+    <script>
+  if (window.location.hostname === 'www.citizeneditions.com') {
+    window.location.href = 'https://citizeneditions.com' + window.location.pathname;
+  }
+</script>
+
     <body>
         <div>
         
@@ -20,7 +27,7 @@
     <li><a href="https://antiherobooks.com" target="_blank">Antihero (United States)</a></li>
     <li><a href="https://areabooks.org" target="_blank">Area Books (United Kingdom)</a></li>
     <li><a href="https://artpapereditions.org" target="_blank">Art Paper Editions (Belgium)</a></li>
-    <li><a href="http://bronze-age.co/" target="_blank">Bronze Age (United Kingdom)</a></li>
+    <li><a href="https://bronze-age.co/" target="_blank">Bronze Age (United Kingdom)</a></li>
     <li><a href="https://www.chosecommune.com" target="_blank">Chose Commune (France)</a></li>
     <li><a href="https://diskobay.org" target="_blank">Disko Bay (Denmark)</a></li>
     <li><a href="https://www.drittelbooks.de" target="_blank">Drittel Books (Germany)</a></li>
